# full-stack-template

./: .env  .env.template  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Makefile
backend/scripts/: cleanup_openapi_schema.py  generate_openapi_schema.sh  init_migrations.sh  init_test.sh  run_mypy  startup.sh
backend/src/api/: deps.py  router.py
backend/src/auth/: access_checker.py  oauth.py
backend/src/db/: alembic.ini  engine.py  migration_head.py
backend/src/exceptions/: bad_request_400.py  forbidden_403.py  handler.py  not_found_404.py  unauthorised_401.py
backend/src/main/: app.py  settings.py
backend/src/models/: token.py
backend/src/repositories/: base.py  token_repository.py  user_repository.py
backend/tests/: conftest.py  test_email.py
backend/tests/api/: test_health.py  test_login.py  test_users.py
backend/tests/crud/: test_db_seed.py
frontend/: .env  README.md  biome.json  index.html  openapi-ts.config.ts  package.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
scripts/: generate_frontend_client.sh  run_migrations.sh  run_mypy  run_test.sh  send_test_email.sh
src/api/routes/: health.py  (+2 more)
src/auth/: oauth.py
src/db/: deps.py  ping.py  seed.py
src/email/: email_sender.py  email_template_schemas.py
src/exceptions/: base_exception.py  conflict_409.py  forbidden_403.py  not_implemented_501.py
src/main/: app.py  logging.py  settings.py
src/models/: __init__.py  base.py  message.py  user.py
src/services/: user_service.py
tests/: conftest.py  test_email.py
tests/api/: test_health.py  test_login.py  test_users.py
tests/crud/: test_db_seed.py
tests/factories/: token.py  user.py
tests/fixtures/: auth.py
tests/utils/: random.py
tests/validators/: token.py  user.py
(+26 files in other folders)
